--- a/style.css
+++ b/style.css
@@ -21,5 +21,13 @@ body{
 
 }
 .playerb{
-    border-style:double
+    border-style:solid;
+    background-color:rgb(3, 238, 255);
+    border-color: rgb(5, 183, 196,1.5);
+    border-width: 1.5px;
+
+}
+
+.startb{
+    margin-top: 35px;
 }
