--- a/style.css
+++ b/style.css
@@ -27,7 +27,37 @@ body{
     border-width: 1.5px;
 
 }
+.playerb:hover{
+     background-color: rgb(0, 180, 200);
+    cursor: pointer;
+}
 
 .startb{
     margin-top: 35px;
+}
+.hint-text {
+  font-size: 14px;
+  color:lightgrey;
+  margin-top: 5px;
+  text-align: center;
+  font-style: italic;
+}
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centers horizontally */
+  margin-top: 20px;
+}
+
+
+.textField {
+    width: 300px;
+  padding: 10px;
+  margin:0 auto;
+  font-size: 16px;
+  border-radius: 10px;
+  border: 2px solid #333;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  text-align: center;
+ 
 }
